--- a/layouts/partials/giscus.html
+++ b/layouts/partials/giscus.html
@@ -1,10 +1,10 @@
 {{ if .Site.Params.enableGiscus }}
 <script src="https://giscus.app/client.js"
-        data-repo="{{ .Site.Params.Gitalk.repo }}"
-        data-repo-id="{{ .Site.Params.Gitalk.repoid }}"
-        data-category="{{ .Site.Params.Gitalk.category }}"
-        data-category-id="{{ .Site.Params.Gitalk.categoryid }}"
-        data-mapping="{{ .Site.Params.Gitalk.mapping }}"
+        data-repo="{{ .Site.Params.Giscus.repo }}"
+        data-repo-id="{{ .Site.Params.Giscus.repoid }}"
+        data-category="{{ .Site.Params.Giscus.category }}"
+        data-category-id="{{ .Site.Params.Giscus.categoryid }}"
+        data-mapping="{{ .Site.Params.Giscus.mapping }}"
         data-strict="1"
         data-reactions-enabled="1"
         data-emit-metadata="1"
