--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 {{ partial "post.html" .}}
 {{ partial "posts.html" .}}
-{{ partial "gitalk.html" . }}
-{{ partial "music.html" . }}
+{{ partial "extra/gitalk.html" . }}
+{{ partial "extra/giscus.html" . }}
 {{end }}
