--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,4 @@
 {{ define "content" }}
 {{ partial "home.html" . }}
-{{ partial "music.html" . }}
+{{ partial "script/globalscript.html" . }}
 {{ end }}
