--- a/layouts/partials/mobile-menus.html
+++ b/layouts/partials/mobile-menus.html
@@ -13,7 +13,7 @@
       Overview
     </a>
     <a class='UnderlineNav-item  {{ if .IsSection }} selected {{ end }}{{ if eq .Type "tags" }} selected {{ end }}'
-      href="{{ .Site.BaseURL }}/posts/">
+      href="{{ .Site.BaseURL }}posts/">
       <svg class="octicon octicon-repo UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1"
         width="16">
         <path fill-rule="evenodd"
@@ -23,8 +23,26 @@
       Posts
       <span class="Counter ">{{ $section_count}}</span>
     </a>
+  </nav>
+</div>
+
+
+{{ $section := where .Site.RegularPages "Section" "in" (slice "posts") }}
+{{ $section_count := len $section }}
+<div class="UnderlineNav user-profile-nav d-block d-md-none position-sticky top-0 pl-3 ml-n3 mr-n3 pr-3 bg-white"
+  style="z-index:3;">
+  <nav class="UnderlineNav-body">
+    <a class="UnderlineNav-item {{ if .IsHome }} selected {{ end }}" href="{{ .Site.BaseURL }}">
+      <svg class="octicon octicon-book UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1"
+        width="16">
+        <path fill-rule="evenodd"
+          d="M0 1.75A.75.75 0 01.75 1h4.253c1.227 0 2.317.59 3 1.501A3.744 3.744 0 0111.006 1h4.245a.75.75 0 01.75.75v10.5a.75.75 0 01-.75.75h-4.507a2.25 2.25 0 00-1.591.659l-.622.621a.75.75 0 01-1.06 0l-.622-.621A2.25 2.25 0 005.258 13H.75a.75.75 0 01-.75-.75V1.75zm8.755 3a2.25 2.25 0 012.25-2.25H14.5v9h-3.757c-.71 0-1.4.201-1.992.572l.004-7.322zm-1.504 7.324l.004-5.073-.002-2.253A2.25 2.25 0 005.003 2.5H1.5v9h3.757a3.75 3.75 0 011.994.574z">
+        </path>
+      </svg>
+      Overview
+    </a>
     <a class='UnderlineNav-item  {{ if .IsSection }} selected {{ end }}{{ if eq .Type "tags" }} selected {{ end }}'
-      href="{{ .Site.BaseURL }}/post/">
+      href="{{ .Site.BaseURL }}post/">
       <svg class="octicon octicon-repo UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1"
         width="16">
         <path fill-rule="evenodd"
@@ -36,3 +54,5 @@
     </a>
   </nav>
 </div>
+
+
