--- a/layouts/partials/script/mathjx.html
+++ b/layouts/partials/script/mathjx.html
@@ -4,6 +4,7 @@
 {{else}}
 <script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 {{end}}
+{{ if false }}
 <script>
     MathJax.Hub.Config({
       tex2jax: {
@@ -29,6 +30,7 @@
       }
     });
 </script>
+{{ end }}
 
 <style>
   code.has-jax {
