vssue is based on VUE2！！

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,4 +3,5 @@
 {{ partial "posts.html" .}}
 {{ partial "extra/gitalk.html" . }}
 {{ partial "extra/giscus.html" . }}
+{{ partial "extra/vssue.html" . }}
 {{end }}
