--- a/layouts/partials/extra/vssue.html
+++ b/layouts/partials/extra/vssue.html
@@ -6,54 +6,56 @@
   <link rel="stylesheet" href="https://unpkg.com/vssue/dist/vssue.min.css">
   <div id="vssue"></div>
   <!-- 先引入 Vue -->
-  {{ if true }}
-  <!-- Vue 运行时版 (runtime only)  -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.esm-browser.js"></script>
-  {{ else }}
-  <!-- 或： Vue 完整版 (runtime + compiler) -->
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.global.prod.js"></script>
+  {{ if eq .Params.Vssue.VueCDN "jsdelivr" }}
+		{{ if eq .Params.Vssue.VueType "full" }}
+				<script src="https://cdn.jsdelivr.neit/npm/vue@2.7.14/dist/vue.runtime.min.js"></script><!-- Vue2 运行时版 (runtime only)  -->
+			{{ else if eq ..Params.Vssue.Type "runtime" }}
+				<script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.min.js"></script><!-- Vue2 完整版 (runtime + compiler) -->
+			{{ else }}
+				{{ erroridf "Params.Vssue.VueType unset" "You should consider set Params.Vssue.VueType in config." }}
+			{{ end }}
+	{{ else if eq .Params.Vssue.VueCDN "unpkg" }}
+		{{ if eq .Params.Vssue.VueType "full" }}
+				<script src="https://unpkg.com/vue@2.7.14/dist/vue.runtime.min.js"></script><!-- Vue2 运行时版 (runtime only)  -->
+			{{ else if eq .Params.Vssue.Type "runtime" }}
+				<script src="https://unpkg.com/vue@2.7.14/dist/vue.min.js"></script><!-- Vue2 完整版 (runtime + compiler) -->
+			{{ else }}
+				{{ erroridf "Params.Vssue.VueType unset" "You should consider set Params.Vssue.VueType in config." }}
+			{{ end }}
+		{{ else }}
+	{{ erroridf "Params.Vssue.VueCDN unset" "You should consider set Params.Vssue.VueCDN in config." }}
   {{ end }}
-  <!-- 在 Vue 之后引入 Vssue -->
-  <!-- Vssue Github 版  -->
-  <script src="https://unpkg.com/vssue/dist/vssue.github.min.js"></script>
-  <!-- 或： Vssue Gitlab 版  -->
-  <script src="https://unpkg.com/vssue/dist/vssue.gitlab.min.js"></script>
-  <!-- 或： Vssue Bitbucket 版  -->
-  <script src="https://unpkg.com/vssue/dist/vssue.bitbucket.min.js"></script>
-  <!-- 或： Vssue Gitee 版  -->
-  <script src="https://unpkg.com/vssue/dist/vssue.gitee.min.js"></script>
-  <!-- 或： Vssue Gitea 版  -->
-  <script src="https://unpkg.com/vssue/dist/vssue.gitea.min.js"></script>
-  <!-- 将 Vssue 作为 Vue 组件使用 -->
-  <!-- 对于 Vue 运行时版，使用渲染函数（render function） -->
-  <script>
-    new Vue({
-      el: '#vssue',
-
-      render: h => h('Vssue', {
-        props: {
-          // 在这里设置当前页面对应的 Issue 标题
-          title: 'Vssue Dev',
-
-          // 在这里设置你使用的平台的 OAuth App 配置
-          options: {
-            owner: '{{ .Site.Params.Vssue.owner }}',
-            repo: '{{ .Site.Params.Vssue.repo }}',
-            clientId: '{{ .Site.Params.Vssue.clientID }}',
-            clientSecret: '{{ .Site.Params.Vssue.clientSecret }}', // 只有在使用某些平台时需要
-          },
-        }
-      })
-    })
-  </script>
-  <!-- 或：对于 Vue 完整版，可以使用模板（template） -->
-  <!--
-  <script>
+  
+   <!-- 在 Vue 之后引入 Vssue -->
+  {{ if eq .Params.Vssue.Provider "Github }}
+		<!-- Vssue Github 版  -->
+		<script src="https://unpkg.com/vssue/dist/vssue.github.min.js"></script>
+	{{ else if eq .Params.Vssue.Provider "Gitlab" }}
+		<!-- 或： Vssue Gitlab 版  -->
+		<script src="https://unpkg.com/vssue/dist/vssue.gitlab.min.js"></script>
+	{{ else if eq .Params.Vssue.Provider "Bitbucket" }}
+		<!-- 或： Vssue Bitbucket 版  -->
+		<script src="https://unpkg.com/vssue/dist/vssue.bitbucket.min.js"></script>
+	{{ else if eq .Params.Vssue.Provider "Gitee" }}
+		<!-- 或： Vssue Gitee 版  -->
+		<script src="https://unpkg.com/vssue/dist/vssue.gitee.min.js"></script>
+	{{ else if eq .Params.Vssue.Provider "Gitea" }}
+		<!-- 或： Vssue Gitea 版  -->
+		<script src="https://unpkg.com/vssue/dist/vssue.gitea.min.js"></script>
+	{{ else }}
+		{{ erroridf "Params.Vssue.Provider unset " "You should consider set Params.Vssue.Provider " }}
+	{{ end }}
+  
+  {{ if .Site.Params.template }}
+	<!-- 将 Vssue 作为 Vue 组件使用 -->
+	<!-- 对于 Vue 完整版，可以使用模板（template） -->
+	{{ if eq .Params.Vssue.Type "full" }}
+	<script>
     new Vue({
       el: '#vssue',
 
       data: {
-        title: 'Vssue Dev',
+        title: '{{ .Site.Params.Vssue.Title }}',
 
         options: {
           owner: '{{ .Site.Params.Vssue.owner }}',
@@ -66,5 +68,30 @@
       template: `<vssue :title="title" :options="options"></vssue>`,
     })
   </script>
-  -->
+	{{ else }}
+		{{ erroridf "Params.Vssue.VueType is 'runtime' " "You should consider set Params.Vssue.VueType = full ." }}
+	{{ end }}
+	{{ else }}
+  <!-- 对于 Vue 运行时版，使用渲染函数（render function） -->
+  <script>
+    new Vue({
+      el: '#vssue',
+
+      render: h => h('Vssue', {
+        props: {
+          // 在这里设置当前页面对应的 Issue 标题
+          title: '{{ .Site.Params.Vssue.Title }}',
+
+          // 在这里设置你使用的平台的 OAuth App 配置
+          options: {
+            owner: '{{ .Site.Params.Vssue.owner }}',
+            repo: '{{ .Site.Params.Vssue.repo }}',
+            clientId: '{{ .Site.Params.Vssue.clientID }}',
+            clientSecret: '{{ .Site.Params.Vssue.clientSecret }}', // 只有在使用某些平台时需要
+          },
+        }
+      })
+    })
+  </script>
+  {{ end }}
 {{ end }}
