--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,5 @@
 {{ define "content" }}
 {{ partial "post.html" .}}
 {{ partial "posts.html" .}}
-{{ partial "extra/gitalk.html" . }}
-{{ partial "extra/giscus.html" . }}
-{{ partial "extra/vssue.html" . }}
+{{ partial "extra/extra.html" . }}
 {{end }}
