--- a/layouts/partials/extra/giscus.html
+++ b/layouts/partials/extra/giscus.html
@@ -11,9 +11,9 @@
         data-strict="1"
         data-reactions-enabled="1"
         data-emit-metadata="1"
-        data-input-position="bottom"
-        data-theme="preferred_color_scheme"
-        data-lang="zh-CN"
+        data-input-position="{{ .Site.Params.Giscus.position }}"
+        data-theme="{{ .Site.Params.Giscus.theme }}"
+        data-lang="{{ .Site.Params.Giscus.lang }}"
 		data-loading="lazy"
         crossorigin="anonymous"
         async>
