--- a/layouts/partials/extra/giscus.html
+++ b/layouts/partials/extra/giscus.html
@@ -1,5 +1,5 @@
 {{ if .Site.Params.Comment }}
-<!--上级 globalscript.html-->
+<!--上级 extra.html-->
 {{ end }}
 {{ if .Site.Params.enableGiscus }}
 <script src="https://giscus.app/client.js"
