--- a/layouts/partials/script/globalscript.html
+++ b/layouts/partials/script/globalscript.html
@@ -1,2 +1,6 @@
+{{ if .Site.Params.Comment }}
+<!--上级 index.html-->
+{{ end }}
 {{ partial "script/aplayer.html" . }}
 {{ partial "script/dplayer.html" . }}
+{{ partial "script/swup.html" . }}
