--- a/layouts/partials/extra/gitalk.html
+++ b/layouts/partials/extra/gitalk.html
@@ -1,5 +1,5 @@
 {{ if .Site.Params.Comment }}
-<!--上级 globalscript.html-->
+<!--上级 extra.html-->
 {{ end }}
 {{ if .Site.Params.enableGitalk }}
 <div id="gitalk-container" class="gitalk-container"></div>
