--- a/layouts/partials/extra/vssue.html
+++ b/layouts/partials/extra/vssue.html
@@ -1,5 +1,5 @@
 {{ if .Site.Params.Comment }}
-<!--上级 globalscript.html-->
+<!--上级 extra.html-->
 {{ end }}
 {{ if .Site.Params.enableVssue }}
   <!-- Vssue 的样式文件 -->
