--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
   {{ partial "header" . }}
   {{ block "content" . }}{{ end }}
   {{ partial "footer.html" . }}
+  {{ partial "script/globalscript.html" . }}
 </body>
 
 {{ partial "script.html" . }}
