--- a/layouts/partials/script/globalscript.html
+++ b/layouts/partials/script/globalscript.html
@@ -1,5 +1,5 @@
 {{ if .Site.Params.Comment }}
-<!--上级 index.html-->
+<!--上级 baseof.html-->
 {{ end }}
 {{ partial "script/aplayer.html" . }}
 {{ partial "script/dplayer.html" . }}
