--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -18,7 +18,8 @@
                   </span>
                   <span class="path-divider">/</span>
                   <strong class="css-truncate css-truncate-target mr-1" style="max-width: 410px">
-                    <a href="{{ .Permalink }}">{{ .Title }}</a></strong>
+                    <a href="{{ .Permalink }}">{{ .Title }}</a>
+                  </strong>
                 </h1>
                 <div class="note m-0">
                   Created <relative-time datetime="{{ .PublishDate.Format "Mon, 02 Jan 2006 15:04:05 -0700" }}"
